--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": ["master"],
+  "branches": ["master", {name: 'beta', prerelease: true}, {name: 'alpha', prerelease: true}],
   "plugins": [
     "@semantic-release/commit-analyzer",
     [
