--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ethereumjs-util": "^7.1.0",
     "hdkey": "^2.0.1",
     "js-sha3": "^0.8.0",
+    "jwt-decode": "^3.1.2",
     "keccak256": "^1.0.6",
     "libsodium-wrappers-sumo": "^0.7.9",
     "lodash": "^4.17.21",
