--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@lunie/cosmos-ledger": "^0.1.8",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@oasisprotocol/client": "0.1.0-alpha8",
+    "@oasisprotocol/ledger": "^0.2.3",
     "@polkadot/api": "^8.13.1",
     "@polkadot/util": "^10.1.1",
     "@terra-money/ledger-terra-js": "^1.2.2",
