--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/gitlab": "^9.3.0",
     "@semantic-release/npm": "^9.0.1",
-    "semantic-release": "^19.0.2",
+    "semantic-release": "19.0.3",
     "semantic-release-telegram": "^1.5.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
