feat: setViewingKeyByContract, handle vk fee error

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@iov/crypto": "^2.5.0",
     "@ledgerhq/hw-app-btc": "5.23.1",
     "@ledgerhq/hw-app-eth": "^6.23.0",
-    "@ledgerhq/hw-app-polkadot": "^6.27.1",
+    "@ledgerhq/hw-app-polkadot": "6.27.2",
     "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@lunie/cosmos-ledger": "^0.1.8",
     "@metamask/eth-sig-util": "^4.0.1",
     "@oasisprotocol/client": "0.1.0-alpha8",
     "@oasisprotocol/ledger": "^0.2.3",
-    "@polkadot/api": "^8.13.1",
-    "@polkadot/util": "^10.1.1",
+    "@polkadot/api": "9.2.3",
+    "@polkadot/util": "10.1.6",
     "@terra-money/ledger-terra-js": "^1.2.2",
     "@terra-money/terra.js": "^3.0.11",
     "assert": "^2.0.0",
