changelog in tg alerts

--- a/.releaserc
+++ b/.releaserc
@@ -28,7 +28,10 @@
     [
         "semantic-release-telegram",
         {
-            "chats": [ -779627620 ]
+            "chats": [ -779627620 ],
+            "templates": {
+              "success" : "A <b><i>{release_type}</i></b> version of <a href='{repository_url}'>{name}</a> has been released. Current version is <b>{version}</b>\nChangelog:\n{release_notes}"
+            }
         }
     ]
   ]
