--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ledgerhq/hw-app-btc": "5.23.1",
     "@ledgerhq/hw-app-eth": "^6.23.0",
     "@ledgerhq/hw-app-polkadot": "6.27.2",
+    "@ledgerhq/hw-app-trx": "^6.27.2",
     "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@lunie/cosmos-ledger": "^0.1.8",
@@ -54,11 +55,13 @@
     "path": "^0.12.7",
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
+    "querystring": "^0.2.1",
     "secp256k1": "^4.0.2",
     "secretjs": "^1.3.0-beta.7",
     "socket.io-client": "^4.5.1",
     "stream-browserify": "^3.0.0",
-    "trezor-connect": "^8.2.6"
+    "trezor-connect": "^8.2.6",
+    "tronweb": "^4.3.0"
   },
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
