--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
     "querystring": "^0.2.1",
+    "querystring-es3": "^0.2.1",
     "secp256k1": "^4.0.2",
     "secretjs": "^1.3.0-beta.7",
     "socket.io-client": "^4.5.1",
