--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "qs": "^6.11.0",
     "querystring-es3": "^0.2.1",
     "secp256k1": "^4.0.2",
-    "secretjs": "^1.3.0-beta.7",
+    "secretjs": "^1.4.0",
     "socket.io-client": "^4.5.1",
     "stream-browserify": "^3.0.0",
     "trezor-connect": "^8.2.6",
