fix: dart package release

--- a/.releaserc
+++ b/.releaserc
@@ -9,19 +9,16 @@
           "linkReferences": false
       }
     ],
-    [
-      "@semantic-release/gitlab",
-      {
-      }
-    ],
+    "@semantic-release/changelog",
     "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json"],
+        "assets": ["package.json", "CHANGELOG.md"],
         "message": "chore(release): ${nextRelease.version} [lib-ci]"
       }
     ],
+    "@semantic-release/gitlab",
     [
         "semantic-release-telegram",
         {
