--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ledgerhq/hw-app-eth": "^6.23.0",
     "@ledgerhq/hw-app-polkadot": "6.27.2",
     "@ledgerhq/hw-app-trx": "^6.27.2",
+    "@ledgerhq/hw-transport": "^6.27.6",
     "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@lunie/cosmos-ledger": "^0.1.8",
