--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "branches": ["master", {name: 'beta', prerelease: true}, {name: 'alpha', prerelease: true}],
+  "branches": ["+([0-9])?(.{+([0-9]),x}).x", "master", {name: 'beta', prerelease: true}, {name: 'alpha', prerelease: true}],
   "plugins": [
     "@semantic-release/commit-analyzer",
     [
