--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ledgerhq/hw-transport-webhid": "^6.20.0",
     "@lunie/cosmos-ledger": "^0.1.8",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@mysten/sui.js": "^0.29.1",
     "@oasisprotocol/client": "0.1.0-alpha8",
     "@oasisprotocol/ledger": "^0.2.3",
     "@polkadot/api": "9.2.3",
