--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@cosmjs/ledger-amino": "^0.28.11",
     "@cosmjs/proto-signing": "^0.28.11",
     "@iov/crypto": "^2.5.0",
-    "@ledgerhq/hw-app-btc": "5.23.1",
+    "@ledgerhq/hw-app-btc": "^10.0.0",
     "@ledgerhq/hw-app-eth": "^6.23.0",
     "@ledgerhq/hw-app-polkadot": "6.27.2",
     "@ledgerhq/hw-app-trx": "^6.27.2",
