--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@cosmjs/proto-signing": "^0.28.11",
     "@iov/crypto": "^2.5.0",
     "@ledgerhq/hw-app-btc": "^10.0.0",
-    "@ledgerhq/hw-app-eth": "^6.23.0",
+    "@ledgerhq/hw-app-eth": "6.33.0",
     "@ledgerhq/hw-app-polkadot": "6.27.2",
     "@ledgerhq/hw-app-trx": "^6.27.2",
     "@ledgerhq/hw-transport": "^6.27.6",
