--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@oasisprotocol/ledger": "^0.2.3",
     "@polkadot/api": "12.2.1",
     "@polkadot/util": "10.1.6",
+    "@stacks/transactions": "^6.16.1",
+    "@stacks/wallet-sdk": "^6.16.1",
     "@terra-money/ledger-terra-js": "^1.2.2",
     "@terra-money/terra.js": "^3.0.11",
     "assert": "^2.0.0",
