fix: add solana network

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ledgerhq/hw-app-btc": "^10.0.0",
     "@ledgerhq/hw-app-eth": "6.29.6",
     "@ledgerhq/hw-app-polkadot": "6.28.3",
+    "@ledgerhq/hw-app-solana": "^7.2.4",
     "@ledgerhq/hw-app-trx": "^6.27.2",
     "@ledgerhq/hw-transport": "^6.27.6",
     "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
@@ -32,6 +33,7 @@
     "@oasisprotocol/ledger": "^0.2.3",
     "@polkadot/api": "12.2.1",
     "@polkadot/util": "10.1.6",
+    "@solana/web3.js": "^1.95.4",
     "@stacks/transactions": "^6.16.1",
     "@stacks/wallet-sdk": "^6.16.1",
     "@terra-money/ledger-terra-js": "^1.2.2",
