--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@solana/web3.js": "^1.95.4",
     "@stacks/transactions": "^6.16.1",
     "@stacks/wallet-sdk": "^6.16.1",
+    "@stacks/encryption": "^7.0.6",
     "@terra-money/ledger-terra-js": "^1.2.2",
     "@terra-money/terra.js": "^3.0.11",
     "assert": "^2.0.0",
